--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h2 class="text-centered">Products</h2>
                 <div class="container-split3 bg-lighter">
                     <div class="container--split container--overlay">
-                        <img class="img-effect" src="Icecream.jpg" alt="Chocolate ice cream">
+                        <img class="img-effect" src="IceCream.jpg" alt="Chocolate ice cream">
                         <div class="overlay">
                             <span>Ice Cream</span>
                         </div>
