modified copyright span

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     </nav>
                     <h6 class="text-left">Ice Cream Kingdom</h6>
                     <p class="footer-information">Sunset Boulevard, Los Angeles, CA, 90028, USA, 410-533-2210 icecreamkingdom@gmail.com</p>
-                    <p class="text-centered footer-p">Copyright <span id="current-year"></span> © <strong>Ice Cream Kingdom</strong> - Powered by Martin Cosimano</p>
+                    <p class="text-centered footer-p">Copyright <span id="current-year"></span> © <strong>Ice Cream Kingdom</strong> - Code & Web Design by Martin Cosimano</p>
                 </div>
             </div>
         </footer>
