adjusted some anchor hrefs and stylized the footer information

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 	</head>
 	<body>
 		<header class="bg-light">
-            <div class="container container-logo ">
-                <img src="Logo.jpg" alt="Logo">
+            <div class="container container-logo">
+                <a href="#"><img src="Logo.jpg" alt="Logo"></a>
             </div>
                 <nav class="navbar">
                     <ul class="nav-menu">
-                        <li class="nav-item"><a href="#products" class="button2 nav-link" >Products</a></li>
-                        <li class="nav-item"><a href="#menu" class="button2 nav-link" >Menu</a></li>
-                        <li class="nav-item"><a href="#aboutus" class="button2 nav-link" >About us</a></li>
+                        <li class="nav-item"><a href="#products" class="button2 nav-link anchor-style" >Products</a></li>
+                        <li class="nav-item"><a href="#menu" class="button2 nav-link anchor-style" >Menu</a></li>
+                        <li class="nav-item"><a href="#aboutus" class="button2 nav-link anchor-style" >About us</a></li>
                     </ul>
                     <div class="hamburger">
                         <span class="bar"></span>
@@ -39,7 +39,7 @@
             <div class="container-main">
                 <h4 class="text-main">TRADITIONAL & DELICIOUS</h4>
                 <h1 class="text-main">Traditional Ice Cream <br>Since 1996</br></h1>
-                <a class="button1" href="#">Read More</a>
+                <a class="button1 anchor-style" href="#aboutus">Read More</a>
             </div>
         </main>
         <!-- Products section starts here -->
@@ -181,14 +181,14 @@
                 <div class="container container-footer--container">
                     <nav class="footer-nav">
                         <ul>
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+                            <li><a class="anchor-style"><i class="fa-brands fa-facebook"></i></a></li>
+                            <li><a class="anchor-style"><i class="fa-brands fa-instagram"></i></a></li>
+                            <li><a class="anchor-style"><i class="fa-solid fa-envelope"></i></a></li>
                         </ul>
                     </nav>
                     <h6 class="text-left">Ice Cream Kingdom</h6>
                     <p class="footer-information">Sunset Boulevard, Los Angeles, CA, 90028, USA, 410-533-2210 icecreamkingdom@gmail.com</p>
-                    <p class="text-centered footer-p">Copyright <span id="current-year"></span> © <strong>Ice Cream Kingdom</strong> - Code & Web Design by <a href="https://github.com/martincosimano">Martin Cosimano</a></p>
+                    <p class="text-centered footer-p">Copyright <span id="current-year"></span> © <strong>Ice Cream Kingdom</strong> - Code & Web Design by <a href="https://github.com/martincosimano" class="footer-anchor">Martin Cosimano</a></p>
                 </div>
             </div>
         </footer>
